Enable successful build of builder12/1.0 docker image -Bring in relevant portions of 10.1.1 and 10.1.5 dockerfiles into 12.0 - Remove deprecated packages and/or replacing them with Debian 12 equivalents

--- a/docker/images/builder12/1.0/Makefile
+++ b/docker/images/builder12/1.0/Makefile
@@ -1,5 +1,5 @@
 VERSION=1.0
-USER=opennetworklinux
+USER=dentproject
 REPO=builder12
 
 TOOLS=../../../tools/docker_shell ../../../tools/container-id
