Adding new 5.15 kernel configs -defaulting them to not set for now -Revisit later

--- a/packages/base/any/kernels/5.15-lts/configs/arm64-all/arm64-all.config
+++ b/packages/base/any/kernels/5.15-lts/configs/arm64-all/arm64-all.config
@@ -456,8 +456,10 @@ CONFIG_ARM64_AMU_EXTN=y
 # ARMv8.5 architectural features
 #
 CONFIG_ARM64_BTI=y
+# CONFIG_ARM64_BTI_KERNEL is not set
 CONFIG_ARM64_E0PD=y
 CONFIG_ARCH_RANDOM=y
+# CONFIG_ARM64_MTE is not set
 # end of ARMv8.5 architectural features
 
 #
@@ -7355,8 +7357,11 @@ CONFIG_LSM="yama,loadpin,safesetid,integrity"
 # Memory initialization
 #
 CONFIG_INIT_STACK_NONE=y
+# CONFIG_INIT_STACK_ALL_PATTERN is not set
+# CONFIG_INIT_STACK_ALL_ZERO is not set
 # CONFIG_INIT_ON_ALLOC_DEFAULT_ON is not set
 # CONFIG_INIT_ON_FREE_DEFAULT_ON is not set
+# CONFIG_ZERO_CALL_USED_REGS is not set
 # end of Memory initialization
 # end of Kernel hardening options
 # end of Security options
